# OPENCV-PROJECT

./: README.md  dati_handsegmentation.csv
OPENCV-PROJECT-main/: pr1.ppm
OPENCV-PROJECT-main/OPENCV_PROJECT/app/src/: hand_detection_segmentation.cpp
OPENCV-PROJECT-main/OPENCV_PROJECT/lib/evaluation/src/: evaluation.cpp
OPENCV-PROJECT-main/OPENCV_PROJECT/lib/segment/src/: segment.cpp
OPENCV-PROJECT-main/OPENCV_PROJECT/lib/skin_segmentation/: CMakeLists.txt
OPENCV-PROJECT-main/OPENCV_PROJECT/ppm_images/: img04.ppm  img05.ppm  img06.ppm  img07.ppm  img09.ppm  img11.ppm  img21.ppm
OPENCV-PROJECT-main/OPENCV_PROJECT/segmentated/: img01.ppm  prova.ppm
OPENCV-PROJECT/OPENCV_PROJECT/: CMakeLists.txt
OPENCV-PROJECT/OPENCV_PROJECT/lib/classifier/include/: classifier.h
OPENCV-PROJECT/OPENCV_PROJECT/lib/detection/: CMakeLists.txt
OPENCV-PROJECT/OPENCV_PROJECT/lib/segment/: CMakeLists.txt
OPENCV-PROJECT/OPENCV_PROJECT/lib/skin_segmentation/src/: skin_segmentation.cpp
OPENCV-PROJECT/OPENCV_PROJECT/segmentated/: prova.ppm
OPENCV-PROJECT/OPENCV_PROJECT/yolo_files/: README.md
OPENCV_PROJECT/: CMakeLists.txt  get_segmentation.h  hand_detection_segmentation.cpp  pr1.ppm
OPENCV_PROJECT/app/: CMakeLists.txt
OPENCV_PROJECT/app/src/: hand_detection_segmentation.cpp
OPENCV_PROJECT/evaluation/: CMakeLists.txt  evaluation.h
OPENCV_PROJECT/lib/classifier/: CMakeLists.txt
OPENCV_PROJECT/lib/classifier/src/: classifier.cpp
OPENCV_PROJECT/lib/detection/: CMakeLists.txt
OPENCV_PROJECT/lib/detection/include/: detection.h
OPENCV_PROJECT/lib/detection/src/: detection.cpp
OPENCV_PROJECT/lib/evaluation/include/: evaluation.h
OPENCV_PROJECT/lib/evaluation/src/: evaluation.cpp
OPENCV_PROJECT/lib/segment/: CMakeLists.txt
OPENCV_PROJECT/lib/segment/include/: get_segmentation.h
OPENCV_PROJECT/lib/segment/src/: segment.cpp
OPENCV_PROJECT/lib/segmentation/: CMakeLists.txt
OPENCV_PROJECT/lib/segmentation/include/: segmentation.h
OPENCV_PROJECT/lib/segmentation/src/: segmentation.cpp
OPENCV_PROJECT/lib/skin_segmentation/: CMakeLists.txt
OPENCV_PROJECT/lib/skin_segmentation/include/: skin_segmentation.h
OPENCV_PROJECT/lib/skin_segmentation/src/: skin_segmentation.cpp
OPENCV_PROJECT/ppm_images/: img01.ppm  img02.ppm  img03.ppm  img08.ppm  img13.ppm  img14.ppm  img15.ppm  img16.ppm  img17.ppm  img18.ppm  img19.ppm  img20.ppm  img23.ppm  img24.ppm  img25.ppm  img26.ppm  img27.ppm  img28.ppm  img30.ppm
OPENCV_PROJECT/segmentated/: img22.ppm  prova.ppm
OPENCV_PROJECT/yolo_files/: notes.txt
OPENCV_PROJECT/yolo_files/training/: obj.data
